--- a/Perfumery/Views/people/Create.cshtml
+++ b/Perfumery/Views/people/Create.cshtml
@@ -3,14 +3,14 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Store.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <body dir="rtl" style="text-align:right">
         <h1 >فرم ثبت نام</h1>
         <hr />
         <div class="row" dir="rtl">
-            <div class="col-md-4">
-                <form asp-action="Create" style="text-align:right">
+            <div class="col-md-8">
+                <form asp-action="Create" style="text-align:right" dir="rtl">
                     <div asp-validation-summary="ModelOnly" class="text-danger" dir="rtl"></div>
                     <div class="form-group">
                         <label asp-for="name" class="control-label"> نام</label>
